11712406-project2/test/test_11712406_9.out
Error type 8 at Line 7: incompatible return type
Error type 8 at Line 14: incompatible return type